# queryparser

./: notes.md  stack.yaml
demo/: queryparser-demo.cabal
demo/src/: Main.hs
