name:                queryparser-demo
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Heli Wang, David Thomas, Matt Halverson
maintainer:          heli@uber.com
-- copyright:
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable demo
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -O2 -threaded -Wall "-with-rtsopts=-N"
  build-depends:       base >=4.10 && <4.11
                     , queryparser
                     , queryparser-vertica
                     , unordered-containers >=0.2 && <0.3
                     , containers >=0.5 && <0.6
                     , text >=1.2 && <1.3
                     , pretty >=1.1 && <1.2
                     , scotty
                     , wai
                     , wai-extra
                     , mtl
                     , async
                     , aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
